@@ -537,6 +537,9 @@ Release 0.22.0 - Unreleased
     HDFS-1965. IPCs done using block token-based tickets can't reuse
     connections (todd)
 
+    HDFS-1964. Fix incorrect HTML unescaping in DatanodeJspHelper
+    (Aaron T. Myers via todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
